--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,8 @@
     <dimen name="_16sdp">16</dimen>
     <dimen name="_5sdp">5</dimen>
     <dimen name="_17sdp">17</dimen>
+    <dimen name="_22sdp">22</dimen>
+    <dimen name="_80sdp">80</dimen>
+    <dimen name="_2sdp">2</dimen>
+    <dimen name="_7sdp">7</dimen>
 </resources>
